# plankton-cefas-scivision

./: README.md  pyproject.toml  requirements.in
resnet50_cefas/: .gitignore  __init__.py  benchmark.py  dataset.py  model.py  new_model.py
tests/: test_model.py
