[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resnet50_cefas"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = ["numpy", "torch", "torchvision", "pooch"]
description = "This package supports the processing and analysis of plankton sample data"
readme = "README.md"

[project.scripts]
cefas-benchmark = "resnet50_cefas.benchmark:main"
